# azMap

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
data/: azmap.desktop
doc/: MAPdata.md  dev-guide.md  user-guide.md
shaders/: map.frag  map.vert
src/: camera.c  camera.h  config.c  config.h  fetch.c  fetch.h  grid.c  grid.h  icon.h  input.c  input.h  main.c  map_data.c  map_data.h  nightmesh.c  nightmesh.h  overlay.c  overlay.h  projection.c  projection.h  qrz.c  qrz.h  renderer.c  renderer.h  solar.c  solar.h  text.c  text.h  ui.c  ui.h
tools/: gen_icon.c
